objects/Centro__Message_Queue__c.object
<CustomObject>
    <description>Log of every message sent by the Centro Salesforce App and any error messages encountered.</description>
    <fields>
        <fullName>Centro__ChannelId__c</fullName>
        <label>Channel ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Interview_GUID__c</fullName>
        <label>Interview GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Message_TS__c</fullName>
        <label>Message TS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Payload__c</fullName>
        <description>JSON payload of queued message</description>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Centro__Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>API Error</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Message Queue</label>
    <listViews>
        <fullName>Centro__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Centro__Interview_GUID__c</columns>
        <columns>Centro__Status__c</columns>
        <columns>Centro__Reason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Centro__Failed_Messages</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Centro__Status__c</columns>
        <columns>Centro__Reason__c</columns>
        <columns>Centro__ChannelId__c</columns>
        <columns>Centro__Message_TS__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Centro__Status__c</field>
            <operation>equals</operation>
            <value>API Error,Failed</value>
        </filters>
        <label>Failed Messages</label>
    </listViews>
    <nameField>
        <displayFormat>MQ-{0000}</displayFormat>
        <label>Message Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>